--- a/tools/analysis/Makefile.am
+++ b/tools/analysis/Makefile.am
@@ -107,6 +107,8 @@ libanalyses_la_SOURCES +=	\
 libanalyses_la_SOURCES +=	
 
 libanalyses_la_SOURCES += include/analyses/CMS_8TeV/cms_1410_6679_ee.h src/analyses/CMS_8TeV/cms_1410_6679_ee.cc
+libanalyses_la_SOURCES += include/analyses/CMS_8TeV/cms_1410_6679_mumu.h src/analyses/CMS_8TeV/cms_1410_6679_mumu.cc
+libanalyses_la_SOURCES += include/analyses/CMS_7TeV/cms_1410_6679_mumu_7.h src/analyses/CMS_7TeV/cms_1410_6679_mumu_7.cc
 #@@extraanalysis@@
 
 libanalyses_la_LDFLAGS = -avoid-version -shared
