--- a/tools/analysis/Makefile.in
+++ b/tools/analysis/Makefile.in
@@ -213,7 +213,9 @@ am_libanalyses_la_OBJECTS = src/global/Global.lo \
 	src/analyses/CMS_8TeV/cms_sus_13_016.lo \
 	src/analyses/CMS_8TeV/cms_exo_14_014.lo \
 	src/analyses/CMS_13TeV/cms_pas_sus_15_011.lo \
-	src/analyses/CMS_8TeV/cms_1410_6679_ee.lo
+	src/analyses/CMS_8TeV/cms_1410_6679_ee.lo \
+	src/analyses/CMS_8TeV/cms_1410_6679_mumu.lo \
+	src/analyses/CMS_7TeV/cms_1410_6679_mumu_7.lo
 libanalyses_la_OBJECTS = $(am_libanalyses_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -646,7 +648,11 @@ libanalyses_la_SOURCES = src/global/Global.cc src/include/Global.h \
 	include/analyses/CMS_13TeV/cms_pas_sus_15_011.h \
 	src/analyses/CMS_13TeV/cms_pas_sus_15_011.cc \
 	include/analyses/CMS_8TeV/cms_1410_6679_ee.h \
-	src/analyses/CMS_8TeV/cms_1410_6679_ee.cc
+	src/analyses/CMS_8TeV/cms_1410_6679_ee.cc \
+	include/analyses/CMS_8TeV/cms_1410_6679_mumu.h \
+	src/analyses/CMS_8TeV/cms_1410_6679_mumu.cc \
+	include/analyses/CMS_7TeV/cms_1410_6679_mumu_7.h \
+	src/analyses/CMS_7TeV/cms_1410_6679_mumu_7.cc
 #@@extraanalysis@@
 libanalyses_la_LDFLAGS = -avoid-version -shared
 #-module 
@@ -1060,6 +1066,12 @@ src/analyses/CMS_13TeV/cms_pas_sus_15_011.lo:  \
 src/analyses/CMS_8TeV/cms_1410_6679_ee.lo:  \
 	src/analyses/CMS_8TeV/$(am__dirstamp) \
 	src/analyses/CMS_8TeV/$(DEPDIR)/$(am__dirstamp)
+src/analyses/CMS_8TeV/cms_1410_6679_mumu.lo:  \
+	src/analyses/CMS_8TeV/$(am__dirstamp) \
+	src/analyses/CMS_8TeV/$(DEPDIR)/$(am__dirstamp)
+src/analyses/CMS_7TeV/cms_1410_6679_mumu_7.lo:  \
+	src/analyses/CMS_7TeV/$(am__dirstamp) \
+	src/analyses/CMS_7TeV/$(DEPDIR)/$(am__dirstamp)
 
 libanalyses.la: $(libanalyses_la_OBJECTS) $(libanalyses_la_DEPENDENCIES) $(EXTRA_libanalyses_la_DEPENDENCIES) 
 	$(AM_V_CXXLD)$(libanalyses_la_LINK) -rpath $(mylibdir) $(libanalyses_la_OBJECTS) $(libanalyses_la_LIBADD) $(LIBS)
@@ -1161,12 +1173,14 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/ATLAS_8TeV/$(DEPDIR)/atlas_conf_2015_004.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_pas_sus_15_011.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_7TeV/$(DEPDIR)/cms_1306_1126_WW.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_7TeV/$(DEPDIR)/cms_1410_6679_mumu_7.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1301_4698_WW.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1303_2985.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1303_2985_CR.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1405_7570.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1408_3583.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1410_6679_ee.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1410_6679_mumu.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1502_06031.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1504_03198.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_exo_14_014.Plo@am__quote@
