--- a/tools/analysis/Makefile.in
+++ b/tools/analysis/Makefile.in
@@ -213,10 +213,11 @@ am_libanalyses_la_OBJECTS = src/global/Global.lo \
 	src/analyses/CMS_8TeV/cms_sus_13_016.lo \
 	src/analyses/CMS_8TeV/cms_exo_14_014.lo \
 	src/analyses/CMS_13TeV/cms_pas_sus_15_011.lo \
-	src/analyses/CMS_8TeV/cms_1410_6679_ee.lo \
 	src/analyses/CMS_8TeV/cms_1410_6679_mumu.lo \
 	src/analyses/CMS_7TeV/cms_1410_6679_mumu_7.lo \
-	src/analyses/CMS_13TeV/cms_1701_02042.lo
+	src/analyses/CMS_13TeV/cms_1701_02042.lo \
+	src/analyses/CMS_8TeV/cms_1410_6679_mumu2j.lo \
+	src/analyses/CMS_7TeV/cms_1410_6679_mumu2j_7.lo
 libanalyses_la_OBJECTS = $(am_libanalyses_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -648,14 +649,16 @@ libanalyses_la_SOURCES = src/global/Global.cc src/include/Global.h \
 	src/analyses/CMS_8TeV/cms_exo_14_014.cc \
 	include/analyses/CMS_13TeV/cms_pas_sus_15_011.h \
 	src/analyses/CMS_13TeV/cms_pas_sus_15_011.cc \
-	include/analyses/CMS_8TeV/cms_1410_6679_ee.h \
-	src/analyses/CMS_8TeV/cms_1410_6679_ee.cc \
 	include/analyses/CMS_8TeV/cms_1410_6679_mumu.h \
 	src/analyses/CMS_8TeV/cms_1410_6679_mumu.cc \
 	include/analyses/CMS_7TeV/cms_1410_6679_mumu_7.h \
 	src/analyses/CMS_7TeV/cms_1410_6679_mumu_7.cc \
 	include/analyses/CMS_13TeV/cms_1701_02042.h \
-	src/analyses/CMS_13TeV/cms_1701_02042.cc
+	src/analyses/CMS_13TeV/cms_1701_02042.cc \
+	include/analyses/CMS_8TeV/cms_1410_6679_mumu2j.h \
+	src/analyses/CMS_8TeV/cms_1410_6679_mumu2j.cc \
+	include/analyses/CMS_7TeV/cms_1410_6679_mumu2j_7.h \
+	src/analyses/CMS_7TeV/cms_1410_6679_mumu2j_7.cc
 #@@extraanalysis@@
 libanalyses_la_LDFLAGS = -avoid-version -shared
 #-module 
@@ -1066,9 +1069,6 @@ src/analyses/CMS_13TeV/$(DEPDIR)/$(am__dirstamp):
 src/analyses/CMS_13TeV/cms_pas_sus_15_011.lo:  \
 	src/analyses/CMS_13TeV/$(am__dirstamp) \
 	src/analyses/CMS_13TeV/$(DEPDIR)/$(am__dirstamp)
-src/analyses/CMS_8TeV/cms_1410_6679_ee.lo:  \
-	src/analyses/CMS_8TeV/$(am__dirstamp) \
-	src/analyses/CMS_8TeV/$(DEPDIR)/$(am__dirstamp)
 src/analyses/CMS_8TeV/cms_1410_6679_mumu.lo:  \
 	src/analyses/CMS_8TeV/$(am__dirstamp) \
 	src/analyses/CMS_8TeV/$(DEPDIR)/$(am__dirstamp)
@@ -1078,6 +1078,12 @@ src/analyses/CMS_7TeV/cms_1410_6679_mumu_7.lo:  \
 src/analyses/CMS_13TeV/cms_1701_02042.lo:  \
 	src/analyses/CMS_13TeV/$(am__dirstamp) \
 	src/analyses/CMS_13TeV/$(DEPDIR)/$(am__dirstamp)
+src/analyses/CMS_8TeV/cms_1410_6679_mumu2j.lo:  \
+	src/analyses/CMS_8TeV/$(am__dirstamp) \
+	src/analyses/CMS_8TeV/$(DEPDIR)/$(am__dirstamp)
+src/analyses/CMS_7TeV/cms_1410_6679_mumu2j_7.lo:  \
+	src/analyses/CMS_7TeV/$(am__dirstamp) \
+	src/analyses/CMS_7TeV/$(DEPDIR)/$(am__dirstamp)
 
 libanalyses.la: $(libanalyses_la_OBJECTS) $(libanalyses_la_DEPENDENCIES) $(EXTRA_libanalyses_la_DEPENDENCIES) 
 	$(AM_V_CXXLD)$(libanalyses_la_LINK) -rpath $(mylibdir) $(libanalyses_la_OBJECTS) $(libanalyses_la_LIBADD) $(LIBS)
@@ -1180,14 +1186,15 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_1701_02042.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_pas_sus_15_011.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_7TeV/$(DEPDIR)/cms_1306_1126_WW.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_7TeV/$(DEPDIR)/cms_1410_6679_mumu2j_7.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_7TeV/$(DEPDIR)/cms_1410_6679_mumu_7.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1301_4698_WW.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1303_2985.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1303_2985_CR.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1405_7570.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1408_3583.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1410_6679_ee.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1410_6679_mumu.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1410_6679_mumu2j.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1502_06031.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1504_03198.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_exo_14_014.Plo@am__quote@
