--- a/results/100test/fritz/4mu.ini
+++ b/results/100test/fritz/4mu.ini
@@ -1,7 +1,7 @@
-[ANALYSIS: cms_1410_6679_ee]
+[ANALYSIS: cms_1410_6679_mumu2j]
 analysishandler = cms8tev
 electron_isolation = cms8tev0
-muon_isolation = cms8tev0
+muon_isolation = cms8tev0 cms8tev1
 photon_isolation = cms8tev0
 
 [ELECTRONISO: cms8tev0]
@@ -19,6 +19,14 @@ dr = 0.05
 ptmin = 0.5
 absorrel = r
 maxval = 0.2
+
+[MUONISO: cms8tev1]
+source = t
+analysishandler = cms8tev
+dr = 0.4
+ptmin = 0.0
+absorrel = r
+maxval = 0.12
 
 [PHOTONISO: cms8tev0]
 source = c
