--- a/test/100test/test.in
+++ b/test/100test/test.in
@@ -1,6 +1,6 @@
 [Parameters]
 Name: 100test
-Analyses: cms_1410_6679_ee
+Analyses: cms_1410_6679_mumu2j
 
 [4mu]
 Events:../test/100test/4mu_8TeV.lhe
