--- a/tools/analysis/Makefile.am
+++ b/tools/analysis/Makefile.am
@@ -111,6 +111,7 @@ libanalyses_la_SOURCES += include/analyses/CMS_7TeV/cms_1410_6679_mumu_7.h src/a
 libanalyses_la_SOURCES += include/analyses/CMS_13TeV/cms_1701_02042.h src/analyses/CMS_13TeV/cms_1701_02042.cc
 libanalyses_la_SOURCES += include/analyses/CMS_8TeV/cms_1410_6679_mumu2j.h src/analyses/CMS_8TeV/cms_1410_6679_mumu2j.cc
 libanalyses_la_SOURCES += include/analyses/CMS_7TeV/cms_1410_6679_mumu2j_7.h src/analyses/CMS_7TeV/cms_1410_6679_mumu2j_7.cc
+libanalyses_la_SOURCES += include/analyses/CMS_8TeV/cms_1606_01522_8.h src/analyses/CMS_8TeV/cms_1606_01522_8.cc
 #@@extraanalysis@@
 
 libanalyses_la_LDFLAGS = -avoid-version -shared
