--- a/results/100test/fritz/2mu_2dm.ini
+++ b/results/100test/fritz/2mu_2dm.ini
@@ -1,8 +1,11 @@
-[ANALYSIS: cms_1410_6679_mumu2j]
+[ANALYSIS: cms_1701_02032_8_4t]
 analysishandler = cms8tev
 electron_isolation = cms8tev0
 muon_isolation = cms8tev0 cms8tev1
 photon_isolation = cms8tev0
+
+[TAUTAG: cms8tev0]
+analysishandler = cms8tev
 
 [ELECTRONISO: cms8tev0]
 source = c
