--- a/tools/analysis/Makefile.in
+++ b/tools/analysis/Makefile.in
@@ -221,7 +221,8 @@ am_libanalyses_la_OBJECTS = src/global/Global.lo \
 	src/analyses/CMS_8TeV/cms_1606_01522_8.lo \
 	src/analyses/CMS_8TeV/cms_1506_00424_8.lo \
 	src/analyses/CMS_8TeV/cms_1701_02032_8_4t.lo \
-	src/analyses/CMS_8TeV/cms_1701_02032_8_2mu2b.lo
+	src/analyses/CMS_8TeV/cms_1701_02032_8_2mu2b.lo \
+	src/analyses/CMS_8TeV/cms_1701_02032_8_2mu2t.lo
 libanalyses_la_OBJECTS = $(am_libanalyses_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -670,7 +671,9 @@ libanalyses_la_SOURCES = src/global/Global.cc src/include/Global.h \
 	include/analyses/CMS_8TeV/cms_1701_02032_8_4t.h \
 	src/analyses/CMS_8TeV/cms_1701_02032_8_4t.cc \
 	include/analyses/CMS_8TeV/cms_1701_02032_8_2mu2b.h \
-	src/analyses/CMS_8TeV/cms_1701_02032_8_2mu2b.cc
+	src/analyses/CMS_8TeV/cms_1701_02032_8_2mu2b.cc \
+	include/analyses/CMS_8TeV/cms_1701_02032_8_2mu2t.h \
+	src/analyses/CMS_8TeV/cms_1701_02032_8_2mu2t.cc
 #@@extraanalysis@@
 libanalyses_la_LDFLAGS = -avoid-version -shared
 #-module 
@@ -1108,6 +1111,9 @@ src/analyses/CMS_8TeV/cms_1701_02032_8_4t.lo:  \
 src/analyses/CMS_8TeV/cms_1701_02032_8_2mu2b.lo:  \
 	src/analyses/CMS_8TeV/$(am__dirstamp) \
 	src/analyses/CMS_8TeV/$(DEPDIR)/$(am__dirstamp)
+src/analyses/CMS_8TeV/cms_1701_02032_8_2mu2t.lo:  \
+	src/analyses/CMS_8TeV/$(am__dirstamp) \
+	src/analyses/CMS_8TeV/$(DEPDIR)/$(am__dirstamp)
 
 libanalyses.la: $(libanalyses_la_OBJECTS) $(libanalyses_la_DEPENDENCIES) $(EXTRA_libanalyses_la_DEPENDENCIES) 
 	$(AM_V_CXXLD)$(libanalyses_la_LINK) -rpath $(mylibdir) $(libanalyses_la_OBJECTS) $(libanalyses_la_LIBADD) $(LIBS)
@@ -1224,6 +1230,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1506_00424_8.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1606_01522_8.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1701_02032_8_2mu2b.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1701_02032_8_2mu2t.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1701_02032_8_4t.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_exo_14_014.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_smp_12_006.Plo@am__quote@
