--- a/results/100test/fritz/2mu_2dm.ini
+++ b/results/100test/fritz/2mu_2dm.ini
@@ -1,8 +1,13 @@
-[ANALYSIS: cms_1701_02032_8_4t]
+[ANALYSIS: cms_1701_02032_8_2mu2t]
 analysishandler = cms8tev
+jet_btags = cms8tev0
 electron_isolation = cms8tev0
-muon_isolation = cms8tev0 cms8tev1
+muon_isolation = cms8tev0
 photon_isolation = cms8tev0
+
+[BTAG: cms8tev0]
+eff = 50.0
+analysishandler = cms8tev
 
 [TAUTAG: cms8tev0]
 analysishandler = cms8tev
@@ -22,14 +27,6 @@ dr = 0.05
 ptmin = 0.5
 absorrel = r
 maxval = 0.2
-
-[MUONISO: cms8tev1]
-source = t
-analysishandler = cms8tev
-dr = 0.4
-ptmin = 0.0
-absorrel = r
-maxval = 0.12
 
 [PHOTONISO: cms8tev0]
 source = c
