--- a/tools/analysis/Makefile.in
+++ b/tools/analysis/Makefile.in
@@ -226,7 +226,8 @@ am_libanalyses_la_OBJECTS = src/global/Global.lo \
 	src/analyses/ATLAS_8TeV/atlas_1612_07004_8.lo \
 	src/analyses/CMS_7TeV/cms_1306_1126_7.lo \
 	src/analyses/ATLAS_8TeV/atlas_1508_04735_8.lo \
-	src/analyses/ATLAS_8TeV/atlas_1506_01839_8.lo
+	src/analyses/ATLAS_8TeV/atlas_1506_01839_8.lo \
+	src/analyses/CMS_8TeV/cms_1507_03268_8.lo
 libanalyses_la_OBJECTS = $(am_libanalyses_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -685,7 +686,9 @@ libanalyses_la_SOURCES = src/global/Global.cc src/include/Global.h \
 	include/analyses/ATLAS_8TeV/atlas_1508_04735_8.h \
 	src/analyses/ATLAS_8TeV/atlas_1508_04735_8.cc \
 	include/analyses/ATLAS_8TeV/atlas_1506_01839_8.h \
-	src/analyses/ATLAS_8TeV/atlas_1506_01839_8.cc
+	src/analyses/ATLAS_8TeV/atlas_1506_01839_8.cc \
+	include/analyses/CMS_8TeV/cms_1507_03268_8.h \
+	src/analyses/CMS_8TeV/cms_1507_03268_8.cc
 #@@extraanalysis@@
 libanalyses_la_LDFLAGS = -avoid-version -shared
 #-module 
@@ -1138,6 +1141,9 @@ src/analyses/ATLAS_8TeV/atlas_1508_04735_8.lo:  \
 src/analyses/ATLAS_8TeV/atlas_1506_01839_8.lo:  \
 	src/analyses/ATLAS_8TeV/$(am__dirstamp) \
 	src/analyses/ATLAS_8TeV/$(DEPDIR)/$(am__dirstamp)
+src/analyses/CMS_8TeV/cms_1507_03268_8.lo:  \
+	src/analyses/CMS_8TeV/$(am__dirstamp) \
+	src/analyses/CMS_8TeV/$(DEPDIR)/$(am__dirstamp)
 
 libanalyses.la: $(libanalyses_la_OBJECTS) $(libanalyses_la_DEPENDENCIES) $(EXTRA_libanalyses_la_DEPENDENCIES) 
 	$(AM_V_CXXLD)$(libanalyses_la_LINK) -rpath $(mylibdir) $(libanalyses_la_OBJECTS) $(libanalyses_la_LIBADD) $(LIBS)
@@ -1256,6 +1262,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1502_06031.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1504_03198.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1506_00424_8.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1507_03268_8.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1606_01522_8.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1701_02032_8_2mu2b.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_8TeV/$(DEPDIR)/cms_1701_02032_8_2mu2t.Plo@am__quote@
