--- a/tools/analysis/Makefile.in
+++ b/tools/analysis/Makefile.in
@@ -244,7 +244,8 @@ am_libanalyses_la_OBJECTS = src/global/Global.lo \
 	src/analyses/ATLAS_8TeV/atlas_1508_04735_8.lo \
 	src/analyses/ATLAS_8TeV/atlas_1506_01839_8.lo \
 	src/analyses/ATLAS_13TeV/atlas_1709_07703_13.lo \
-	src/analyses/ATLAS_13TeV/atlas_1709_07242_13.lo
+	src/analyses/ATLAS_13TeV/atlas_1709_07242_13.lo \
+	src/analyses/CMS_13TeV/cms_1709_08908.lo
 libanalyses_la_OBJECTS = $(am_libanalyses_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -738,7 +739,9 @@ libanalyses_la_SOURCES = src/global/Global.cc src/include/Global.h \
 	include/analyses/ATLAS_13TeV/atlas_1709_07703_13.h \
 	src/analyses/ATLAS_13TeV/atlas_1709_07703_13.cc \
 	include/analyses/ATLAS_13TeV/atlas_1709_07242_13.h \
-	src/analyses/ATLAS_13TeV/atlas_1709_07242_13.cc
+	src/analyses/ATLAS_13TeV/atlas_1709_07242_13.cc \
+	include/analyses/CMS_13TeV/cms_1709_08908.h \
+	src/analyses/CMS_13TeV/cms_1709_08908.cc
 #@@extraanalysis@@
 libanalyses_la_LDFLAGS = -avoid-version -shared
 #-module 
@@ -1245,6 +1248,9 @@ src/analyses/ATLAS_13TeV/atlas_1709_07703_13.lo:  \
 src/analyses/ATLAS_13TeV/atlas_1709_07242_13.lo:  \
 	src/analyses/ATLAS_13TeV/$(am__dirstamp) \
 	src/analyses/ATLAS_13TeV/$(DEPDIR)/$(am__dirstamp)
+src/analyses/CMS_13TeV/cms_1709_08908.lo:  \
+	src/analyses/CMS_13TeV/$(am__dirstamp) \
+	src/analyses/CMS_13TeV/$(DEPDIR)/$(am__dirstamp)
 
 libanalyses.la: $(libanalyses_la_OBJECTS) $(libanalyses_la_DEPENDENCIES) $(EXTRA_libanalyses_la_DEPENDENCIES) 
 	$(AM_V_CXXLD)$(libanalyses_la_LINK) -rpath $(mylibdir) $(libanalyses_la_OBJECTS) $(libanalyses_la_LIBADD) $(LIBS)
@@ -1362,6 +1368,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/ATLAS_8TeV/$(DEPDIR)/atlas_conf_2015_004.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_1701_02042.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_1709_08601_13.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_1709_08908.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_pas_sus_15_011.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_sus_16_025.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_sus_16_039.Plo@am__quote@
