--- a/tools/analysis/Makefile.in
+++ b/tools/analysis/Makefile.in
@@ -247,7 +247,8 @@ am_libanalyses_la_OBJECTS = src/global/Global.lo \
 	src/analyses/ATLAS_13TeV/atlas_1709_07242_13.lo \
 	src/analyses/CMS_13TeV/cms_1709_08908.lo \
 	src/analyses/CMS_13TeV/cms_1711_00431.lo \
-	src/analyses/ATLAS_13TeV/atlas_1712_02304.lo
+	src/analyses/ATLAS_13TeV/atlas_1712_02304.lo \
+	src/analyses/CMS_13TeV/cms_1801_01846.lo
 libanalyses_la_OBJECTS = $(am_libanalyses_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -747,7 +748,9 @@ libanalyses_la_SOURCES = src/global/Global.cc src/include/Global.h \
 	include/analyses/CMS_13TeV/cms_1711_00431.h \
 	src/analyses/CMS_13TeV/cms_1711_00431.cc \
 	include/analyses/ATLAS_13TeV/atlas_1712_02304.h \
-	src/analyses/ATLAS_13TeV/atlas_1712_02304.cc
+	src/analyses/ATLAS_13TeV/atlas_1712_02304.cc \
+	include/analyses/CMS_13TeV/cms_1801_01846.h \
+	src/analyses/CMS_13TeV/cms_1801_01846.cc
 #@@extraanalysis@@
 libanalyses_la_LDFLAGS = -avoid-version -shared
 #-module 
@@ -1263,6 +1266,9 @@ src/analyses/CMS_13TeV/cms_1711_00431.lo:  \
 src/analyses/ATLAS_13TeV/atlas_1712_02304.lo:  \
 	src/analyses/ATLAS_13TeV/$(am__dirstamp) \
 	src/analyses/ATLAS_13TeV/$(DEPDIR)/$(am__dirstamp)
+src/analyses/CMS_13TeV/cms_1801_01846.lo:  \
+	src/analyses/CMS_13TeV/$(am__dirstamp) \
+	src/analyses/CMS_13TeV/$(DEPDIR)/$(am__dirstamp)
 
 libanalyses.la: $(libanalyses_la_OBJECTS) $(libanalyses_la_DEPENDENCIES) $(EXTRA_libanalyses_la_DEPENDENCIES) 
 	$(AM_V_CXXLD)$(libanalyses_la_LINK) -rpath $(mylibdir) $(libanalyses_la_OBJECTS) $(libanalyses_la_LIBADD) $(LIBS)
@@ -1383,6 +1389,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_1709_08601_13.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_1709_08908.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_1711_00431.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_1801_01846.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_pas_sus_15_011.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_sus_16_025.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/CMS_13TeV/$(DEPDIR)/cms_sus_16_039.Plo@am__quote@
