--- a/tools/analysis/Makefile
+++ b/tools/analysis/Makefile
@@ -248,7 +248,8 @@ am_libanalyses_la_OBJECTS = src/global/Global.lo \
 	src/analyses/CMS_13TeV/cms_1709_08908.lo \
 	src/analyses/CMS_13TeV/cms_1711_00431.lo \
 	src/analyses/ATLAS_13TeV/atlas_1712_02304.lo \
-	src/analyses/CMS_13TeV/cms_1801_01846.lo
+	src/analyses/CMS_13TeV/cms_1801_01846.lo \
+	src/analyses/ATLAS_13TeV/atlas_1803_02762.lo
 libanalyses_la_OBJECTS = $(am_libanalyses_la_OBJECTS)
 AM_V_lt = $(am__v_lt_$(V))
 am__v_lt_ = $(am__v_lt_$(AM_DEFAULT_VERBOSITY))
@@ -750,7 +751,9 @@ libanalyses_la_SOURCES = src/global/Global.cc src/include/Global.h \
 	include/analyses/ATLAS_13TeV/atlas_1712_02304.h \
 	src/analyses/ATLAS_13TeV/atlas_1712_02304.cc \
 	include/analyses/CMS_13TeV/cms_1801_01846.h \
-	src/analyses/CMS_13TeV/cms_1801_01846.cc
+	src/analyses/CMS_13TeV/cms_1801_01846.cc \
+	include/analyses/ATLAS_13TeV/atlas_1803_02762.h \
+	src/analyses/ATLAS_13TeV/atlas_1803_02762.cc
 #@@extraanalysis@@
 libanalyses_la_LDFLAGS = -avoid-version -shared
 #-module 
@@ -1269,6 +1272,9 @@ src/analyses/ATLAS_13TeV/atlas_1712_02304.lo:  \
 src/analyses/CMS_13TeV/cms_1801_01846.lo:  \
 	src/analyses/CMS_13TeV/$(am__dirstamp) \
 	src/analyses/CMS_13TeV/$(DEPDIR)/$(am__dirstamp)
+src/analyses/ATLAS_13TeV/atlas_1803_02762.lo:  \
+	src/analyses/ATLAS_13TeV/$(am__dirstamp) \
+	src/analyses/ATLAS_13TeV/$(DEPDIR)/$(am__dirstamp)
 
 libanalyses.la: $(libanalyses_la_OBJECTS) $(libanalyses_la_DEPENDENCIES) $(EXTRA_libanalyses_la_DEPENDENCIES) 
 	$(AM_V_CXXLD)$(libanalyses_la_LINK) -rpath $(mylibdir) $(libanalyses_la_OBJECTS) $(libanalyses_la_LIBADD) $(LIBS)
@@ -1321,6 +1327,7 @@ include src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1712_02304.Plo
 include src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1712_02332.Plo
 include src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1712_08119.Plo
 include src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1802_03158.Plo
+include src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1803_02762.Plo
 include src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_conf_2015_082.Plo
 include src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_conf_2016_013.Plo
 include src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_conf_2016_050.Plo
