--- a/tools/analysis/Makefile
+++ b/tools/analysis/Makefile
@@ -266,7 +266,8 @@ am_libanalyses_la_OBJECTS = src/global/Global.lo \
 	src/analyses/CMS_13TeV/cms_1806_05246.lo \
 	src/analyses/CMS_13TeV/cms_1806_04771.lo \
 	src/analyses/CMS_13TeV/cms_1805_04865.lo \
-	src/analyses/CMS_13TeV/cms_1807_02048.lo
+	src/analyses/CMS_13TeV/cms_1807_02048.lo \
+	src/analyses/CMS_13TeV/cms_1807_07799.lo
 libanalyses_la_OBJECTS = $(am_libanalyses_la_OBJECTS)
 AM_V_lt = $(am__v_lt_$(V))
 am__v_lt_ = $(am__v_lt_$(AM_DEFAULT_VERBOSITY))
@@ -788,7 +789,9 @@ libanalyses_la_SOURCES = src/global/Global.cc src/include/Global.h \
 	include/analyses/CMS_13TeV/cms_1805_04865.h \
 	src/analyses/CMS_13TeV/cms_1805_04865.cc \
 	include/analyses/CMS_13TeV/cms_1807_02048.h \
-	src/analyses/CMS_13TeV/cms_1807_02048.cc
+	src/analyses/CMS_13TeV/cms_1807_02048.cc \
+	include/analyses/CMS_13TeV/cms_1807_07799.h \
+	src/analyses/CMS_13TeV/cms_1807_07799.cc
 #@@extraanalysis@@
 libanalyses_la_LDFLAGS = -avoid-version -shared
 #-module 
@@ -1333,6 +1336,9 @@ src/analyses/CMS_13TeV/cms_1805_04865.lo:  \
 src/analyses/CMS_13TeV/cms_1807_02048.lo:  \
 	src/analyses/CMS_13TeV/$(am__dirstamp) \
 	src/analyses/CMS_13TeV/$(DEPDIR)/$(am__dirstamp)
+src/analyses/CMS_13TeV/cms_1807_07799.lo:  \
+	src/analyses/CMS_13TeV/$(am__dirstamp) \
+	src/analyses/CMS_13TeV/$(DEPDIR)/$(am__dirstamp)
 
 libanalyses.la: $(libanalyses_la_OBJECTS) $(libanalyses_la_DEPENDENCIES) $(EXTRA_libanalyses_la_DEPENDENCIES) 
 	$(AM_V_CXXLD)$(libanalyses_la_LINK) -rpath $(mylibdir) $(libanalyses_la_OBJECTS) $(libanalyses_la_LIBADD) $(LIBS)
@@ -1463,6 +1469,7 @@ include src/analyses/CMS_13TeV/$(DEPDIR)/cms_1806_04771.Plo
 include src/analyses/CMS_13TeV/$(DEPDIR)/cms_1806_05246.Plo
 include src/analyses/CMS_13TeV/$(DEPDIR)/cms_1806_05264.Plo
 include src/analyses/CMS_13TeV/$(DEPDIR)/cms_1807_02048.Plo
+include src/analyses/CMS_13TeV/$(DEPDIR)/cms_1807_07799.Plo
 include src/analyses/CMS_13TeV/$(DEPDIR)/cms_pas_sus_15_011.Plo
 include src/analyses/CMS_13TeV/$(DEPDIR)/cms_sus_16_025.Plo
 include src/analyses/CMS_13TeV/$(DEPDIR)/cms_sus_16_039.Plo
