--- a/tools/analysis/Makefile.am
+++ b/tools/analysis/Makefile.am
@@ -158,6 +158,7 @@ libanalyses_la_SOURCES += include/analyses/CMS_13TeV/cms_1807_07799.h src/analys
 libanalyses_la_SOURCES += include/analyses/ATLAS_13TeV/atlas_1807_06573.h src/analyses/ATLAS_13TeV/atlas_1807_06573.cc
 libanalyses_la_SOURCES += include/analyses/ATLAS_13TeV/atlas_1808_01191.h src/analyses/ATLAS_13TeV/atlas_1808_01191.cc
 libanalyses_la_SOURCES += include/analyses/ATLAS_13TeV/atlas_1808_01899.h src/analyses/ATLAS_13TeV/atlas_1808_01899.cc
+libanalyses_la_SOURCES += include/analyses/CMS_13TeV/cms_1808_03684.h src/analyses/CMS_13TeV/cms_1808_03684.cc
 #@@extraanalysis@@
 
 libanalyses_la_LDFLAGS = -avoid-version -shared
