--- a/tools/analysis/Makefile.in
+++ b/tools/analysis/Makefile.in
@@ -273,7 +273,8 @@ am_libanalyses_la_OBJECTS = src/global/Global.lo \
 	src/analyses/CMS_13TeV/cms_1808_03684.lo \
 	src/analyses/CMS_13TeV/cms_1801_03957.lo \
 	src/analyses/CMS_13TeV/cms_1704_03366.lo \
-	src/analyses/ATLAS_13TeV/atlas_1805_09299.lo
+	src/analyses/ATLAS_13TeV/atlas_1805_09299.lo \
+	src/analyses/ATLAS_13TeV/atlas_1708_09266.lo
 libanalyses_la_OBJECTS = $(am_libanalyses_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -310,6 +311,7 @@ am__depfiles_remade =  \
 	src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1704_03848.Plo \
 	src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1706_03731.Plo \
 	src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1708_07875.Plo \
+	src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1708_09266.Plo \
 	src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1709_04183.Plo \
 	src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1709_07242_13.Plo \
 	src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1709_07703_13.Plo \
@@ -951,7 +953,9 @@ libanalyses_la_SOURCES = src/global/Global.cc src/include/Global.h \
 	include/analyses/CMS_13TeV/cms_1704_03366.h \
 	src/analyses/CMS_13TeV/cms_1704_03366.cc \
 	include/analyses/ATLAS_13TeV/atlas_1805_09299.h \
-	src/analyses/ATLAS_13TeV/atlas_1805_09299.cc
+	src/analyses/ATLAS_13TeV/atlas_1805_09299.cc \
+	include/analyses/ATLAS_13TeV/atlas_1708_09266.h \
+	src/analyses/ATLAS_13TeV/atlas_1708_09266.cc
 #@@extraanalysis@@
 libanalyses_la_LDFLAGS = -avoid-version -shared
 #-module 
@@ -1517,6 +1521,9 @@ src/analyses/CMS_13TeV/cms_1704_03366.lo:  \
 src/analyses/ATLAS_13TeV/atlas_1805_09299.lo:  \
 	src/analyses/ATLAS_13TeV/$(am__dirstamp) \
 	src/analyses/ATLAS_13TeV/$(DEPDIR)/$(am__dirstamp)
+src/analyses/ATLAS_13TeV/atlas_1708_09266.lo:  \
+	src/analyses/ATLAS_13TeV/$(am__dirstamp) \
+	src/analyses/ATLAS_13TeV/$(DEPDIR)/$(am__dirstamp)
 
 libanalyses.la: $(libanalyses_la_OBJECTS) $(libanalyses_la_DEPENDENCIES) $(EXTRA_libanalyses_la_DEPENDENCIES) 
 	$(AM_V_CXXLD)$(libanalyses_la_LINK) -rpath $(mylibdir) $(libanalyses_la_OBJECTS) $(libanalyses_la_LIBADD) $(LIBS)
@@ -1562,6 +1569,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1704_03848.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1706_03731.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1708_07875.Plo@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1708_09266.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1709_04183.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1709_07242_13.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1709_07703_13.Plo@am__quote@ # am--include-marker
@@ -1905,6 +1913,7 @@ distclean: distclean-am
 	-rm -f src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1704_03848.Plo
 	-rm -f src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1706_03731.Plo
 	-rm -f src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1708_07875.Plo
+	-rm -f src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1708_09266.Plo
 	-rm -f src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1709_04183.Plo
 	-rm -f src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1709_07242_13.Plo
 	-rm -f src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1709_07703_13.Plo
@@ -2092,6 +2101,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1704_03848.Plo
 	-rm -f src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1706_03731.Plo
 	-rm -f src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1708_07875.Plo
+	-rm -f src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1708_09266.Plo
 	-rm -f src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1709_04183.Plo
 	-rm -f src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1709_07242_13.Plo
 	-rm -f src/analyses/ATLAS_13TeV/$(DEPDIR)/atlas_1709_07703_13.Plo
