--- a/tools/fritz/Makefile
+++ b/tools/fritz/Makefile
@@ -367,11 +367,11 @@ PATH_SEPARATOR = :
 PYTHIAINCLUDE = -I/home/shadowquark/code/github/checkmate/tools/pythia/include
 PYTHIALIBDIR = /home/shadowquark/code/github/checkmate/tools/pythia/lib
 PYTHIALIBS = -L/home/shadowquark/code/github/checkmate/tools/pythia/lib -lpythia8 -ldl -lm -lz
-PYTHON = /usr/bin/python
+PYTHON = /home/shadowquark/code/anaconda3/bin/python
 PYTHON_EXEC_PREFIX = ${exec_prefix}
-PYTHON_PLATFORM = linux2
+PYTHON_PLATFORM = linux
 PYTHON_PREFIX = ${prefix}
-PYTHON_VERSION = 2.7
+PYTHON_VERSION = 3.7
 RANLIB = ranlib
 ROOTAUXCFLAGS = -pthread -std=c++11 -m64
 ROOTAUXLIBS = -pthread -lm -ldl -rdynamic
@@ -441,8 +441,8 @@ pkgpythondir = ${pythondir}/checkmate
 prefix = /usr/local
 program_transform_name = s,x,x,
 psdir = ${docdir}
-pyexecdir = ${exec_prefix}/lib/python2.7/dist-packages
-pythondir = ${prefix}/lib/python2.7/dist-packages
+pyexecdir = ${exec_prefix}/lib/python3.7/site-packages
+pythondir = ${prefix}/lib/python3.7/site-packages
 runstatedir = ${localstatedir}/run
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
